# VoiceLab

./: .buildinfo  .directory  .gitignore  03-01-01-01-01-01-01_trimmed_sound_0_1  03-01-01-01-01-01-02_trimmed_sound_0_1  03-01-01-01-01-01-03_trimmed_sound_0_1  03-01-01-01-01-01-04_trimmed_sound_0_1  03-01-01-01-01-01-05_trimmed_sound_0_1  2.0.0  LICENSE  README.md  SECURITY.md  _config.yml  a_fAH18_trimmed_silences_10_0_sound_0_1  a_fAH19_trimmed_silences_10_0_sound_0_1  a_fAN25_trimmed_silences_10_0_sound_0_1  a_fBS18_trimmed_silences_10_0_sound_0_1  a_fCW23_trimmed_silences_10_0_sound_0_1  index.html  long_description  objects.inv  parselmouth_cc.txt  pyproject.toml  requirements.txt  script.py  search.html  searchindex.js  setup.py  setup.py.backup  voicelab.py  voicelab_osx.spec  voicelab_results.xlsx  voicelab_settings.xlsx  voicelab_ubuntu.spec  voicelab_windows.spec
.doctrees/: environment.pickle  index.doctree
.github/workflows/: PyInstaller-Windows.yml  documentation.yaml
FormantEditor/: FormantTab.py  draggable_points.py
GUI/: file_manager.py  main_window.py  sharedVoiceAttributes.py  tests_file_manager.py  tests_shared_voice_attributes.py
Voicelab/: .directory  __main__.py  default_settings.py
Voicelab/VoicelabWizard/: ExperimentalTab.py  F1F2PlotWindow.py  HOW-TO-GUIDE.txt  InputTab.py  ManipulationWindow.py  OutputTab.py  SettingsTab.py  VoicelabController.py  VoicelabDataModel.py  VoicelabTab.py
Voicelab/docs/: searchindex.js
docs/: .buildinfo  _config.yml  genindex.html  index.html  index.md  objects.inv  search.html  searchindex.js
src/: build.spec  favicon.icns  requirements.txt
voice_lab/: __main__.py
(+214 files in other folders)
