[tool.poetry]
name = "voicelab"
version = "2.0.0"
description = "Automated Reproducible Voice Analysis"
authors = ["David Feinberg <feinberg@mcmaster.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <=3.11.10"
llvmlite = "=0.42.0"
numpy = ">=1.22"
pyqt5-qt5 = ">=5.15.3"
QDarkStyle = "3.2.3"
praat-parselmouth = ">=0.4.1"
librosa = ">=0.10.1"
openpyxl = ">=3.1.2"
seaborn = ">=0.13.2"

[tool.poetry.group.dev.dependencies]
PyInstaller = ">=5.10,<7.0"
Sphinx = "<8.0.0"
sphinx-autodoc2 = ">=0.4.2"
sphinx_rtd_theme = ">=0.1.0"
pytest = ">=7.3.0"
myst = "^1.0.4"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
voicelab = "voicelab.src.Voicelab.voicelab_script:main"
